// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarms-expand-panel Renders \`alarms-expand-panel\` with custom props 1`] = `
<div
  class="v-tabs expand-panel secondary lighten-2 v-tabs--centered theme--dark"
  editing="true"
>
  <div
    class="v-item-group theme--dark v-slide-group v-tabs-bar v-tabs-bar--is-mobile white--text secondary lighten-1"
    role="tablist"
  >
    <div
      class="v-slide-group__prev v-slide-group__prev--disabled"
    >
      <transition-stub
        name="fade-transition"
      />
    </div>
    <div
      class="v-slide-group__wrapper"
    >
      <div
        class="v-slide-group__content v-tabs-bar__content"
      >
        <div
          class="v-tabs-slider-wrapper"
          style="height: 2px; left: 0px; width: 0px;"
        >
          <div
            class="v-tabs-slider primary"
          />
        </div>
        <a
          aria-selected="true"
          class="v-tab v-tab--active"
          href="#moreInfos"
          role="tab"
          tabindex="0"
        >
    More infos
        </a>
        <a
          aria-selected="false"
          class="v-tab"
          href="#timeLine"
          role="tab"
          tabindex="0"
        >
    Timeline
        </a>
        <!---->
        <!---->
        <a
          aria-selected="false"
          class="v-tab"
          href="#pbehavior"
          role="tab"
          tabindex="0"
        >
    Pbehaviors
        </a>
        <!---->
        <!---->
        <!---->
        <!---->
      </div>
    </div>
    <div
      class="v-slide-group__next v-slide-group__next--disabled"
    >
      <transition-stub
        name="fade-transition"
      />
    </div>
  </div>
  <div
    class="v-window v-item-group theme--light v-tabs-items"
  >
    <div
      class="v-window__container"
    >
      <transition-stub
        name="v-window-x-transition"
      >
        <div
          class="v-window-item v-window-item--active"
          id="moreInfos"
        >
          <div
            class="layout pa-3"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <div
                    class="more-infos"
                  >
                    <div>
                      template
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <transition-stub
        name="v-window-x-transition"
      >
        <div
          class="v-window-item v-window-item--active"
          id="timeLine"
        >
          <div
            class="layout pa-3"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  aria-valuemax="100"
                  aria-valuemin="0"
                  class="v-progress-linear v-progress-linear--visible theme--light"
                  role="progressbar"
                  style="height: 0px;"
                >
                  <div
                    class="v-progress-linear__background primary"
                    style="opacity: 0.3; left: 0%; width: 100%;"
                  />
                  <div
                    class="v-progress-linear__buffer"
                    style="height: 0px;"
                  />
                  <transition-stub
                    name="fade-transition"
                  >
                    <div
                      class="v-progress-linear__indeterminate"
                    >
                      <div
                        class="v-progress-linear__indeterminate long primary"
                      />
                      <div
                        class="v-progress-linear__indeterminate short primary"
                      />
                    </div>
                  </transition-stub>
                </div>
                <div
                  class="v-card__text"
                >
                  <alarms-time-line-stub
                    steps="[object Object]"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <!---->
      <!---->
      <transition-stub
        name="v-window-x-transition"
      >
        <div
          class="v-window-item v-window-item--active"
          id="pbehavior"
        >
          <div
            class="layout pa-3 secondary lighten-2"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <pbehaviors-simple-list-stub
                    entity="[object Object]"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
  </div>
</div>
`;

exports[`alarms-expand-panel Renders \`alarms-expand-panel\` with full alarm 1`] = `
<div
  class="v-tabs expand-panel secondary lighten-2 v-tabs--centered theme--dark"
>
  <div
    class="v-item-group theme--dark v-slide-group v-tabs-bar v-tabs-bar--is-mobile white--text secondary lighten-1"
    role="tablist"
  >
    <div
      class="v-slide-group__prev v-slide-group__prev--disabled"
    >
      <transition-stub
        name="fade-transition"
      />
    </div>
    <div
      class="v-slide-group__wrapper"
    >
      <div
        class="v-slide-group__content v-tabs-bar__content"
      >
        <div
          class="v-tabs-slider-wrapper"
          style="height: 2px; left: 0px; width: 0px;"
        >
          <div
            class="v-tabs-slider primary"
          />
        </div>
        <a
          aria-selected="true"
          class="v-tab v-tab--active"
          href="#moreInfos"
          role="tab"
          tabindex="0"
        >
    More infos
        </a>
        <a
          aria-selected="false"
          class="v-tab"
          href="#timeLine"
          role="tab"
          tabindex="0"
        >
    Timeline
        </a>
        <!---->
        <a
          aria-selected="false"
          class="v-tab"
          href="#ticketsDeclared"
          role="tab"
          tabindex="0"
        >
    Tickets declared
        </a>
        <a
          aria-selected="false"
          class="v-tab"
          href="#pbehavior"
          role="tab"
          tabindex="0"
        >
    Pbehaviors
        </a>
        <!---->
        <a
          aria-selected="false"
          class="v-tab"
          href="#trackSource"
          role="tab"
          tabindex="0"
        >
    Track source
        </a>
        <a
          aria-selected="false"
          class="v-tab"
          href="#impactChain"
          role="tab"
          tabindex="0"
        >
    Impact chain
        </a>
        <!---->
      </div>
    </div>
    <div
      class="v-slide-group__next v-slide-group__next--disabled"
    >
      <transition-stub
        name="fade-transition"
      />
    </div>
  </div>
  <div
    class="v-window v-item-group theme--light v-tabs-items"
  >
    <div
      class="v-window__container"
    >
      <transition-stub
        name="v-window-x-transition"
      >
        <div
          class="v-window-item v-window-item--active"
          id="moreInfos"
        >
          <div
            class="layout pa-3"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <div
                    class="more-infos"
                  >
                    <div>
                      template
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <transition-stub
        name="v-window-x-transition"
      >
        <div
          class="v-window-item v-window-item--active"
          id="timeLine"
        >
          <div
            class="layout pa-3"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  aria-valuemax="100"
                  aria-valuemin="0"
                  class="v-progress-linear v-progress-linear--visible theme--light"
                  role="progressbar"
                  style="height: 0px;"
                >
                  <div
                    class="v-progress-linear__background primary"
                    style="opacity: 0.3; left: 0%; width: 100%;"
                  />
                  <div
                    class="v-progress-linear__buffer"
                    style="height: 0px;"
                  />
                  <transition-stub
                    name="fade-transition"
                  >
                    <div
                      class="v-progress-linear__indeterminate"
                    >
                      <div
                        class="v-progress-linear__indeterminate long primary"
                      />
                      <div
                        class="v-progress-linear__indeterminate short primary"
                      />
                    </div>
                  </transition-stub>
                </div>
                <div
                  class="v-card__text"
                >
                  <alarms-time-line-stub
                    steps="[object Object]"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <transition-stub
        name="v-window-x-transition"
      >
        <div
          class="v-window-item v-window-item--active"
          id="ticketsDeclared"
        >
          <div
            class="layout pa-3"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <declared-tickets-list-stub
                    tickets="[object Object]"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <!---->
      <transition-stub
        name="v-window-x-transition"
      >
        <div
          class="v-window-item v-window-item--active"
          id="pbehavior"
        >
          <div
            class="layout pa-3 secondary lighten-2"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <pbehaviors-simple-list-stub
                    entity="[object Object]"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <!---->
      <transition-stub
        name="v-window-x-transition"
      >
        <div
          class="v-window-item v-window-item--active"
          id="trackSource"
        >
          <div
            class="layout pa-3 secondary lighten-2"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <service-dependencies-stub
                    columns="[object Object]"
                    includeroot="true"
                    openableroot="true"
                    root="[object Object]"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <transition-stub
        name="v-window-x-transition"
      >
        <div
          class="v-window-item v-window-item--active"
          id="impactChain"
        >
          <div
            class="layout pa-3 secondary lighten-2"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <service-dependencies-stub
                    columns="[object Object]"
                    impact="true"
                    includeroot="true"
                    openableroot="true"
                    root="[object Object]"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
</div>
`;

exports[`alarms-expand-panel Renders \`alarms-expand-panel\` with gantt 1`] = `
<div
  class="v-tabs expand-panel secondary lighten-2 v-tabs--centered theme--dark"
>
  <div
    class="v-item-group theme--dark v-slide-group v-tabs-bar v-tabs-bar--is-mobile white--text secondary lighten-1"
    role="tablist"
  >
    <div
      class="v-slide-group__prev v-slide-group__prev--disabled"
    >
      <transition-stub
        name="fade-transition"
      />
    </div>
    <div
      class="v-slide-group__wrapper"
    >
      <div
        class="v-slide-group__content v-tabs-bar__content"
      >
        <div
          class="v-tabs-slider-wrapper"
          style="height: 2px; left: 0px; width: 0px;"
        >
          <div
            class="v-tabs-slider primary"
          />
        </div>
        <a
          aria-selected="true"
          class="v-tab v-tab--active"
          href="#moreInfos"
          role="tab"
          tabindex="0"
        >
    More infos
        </a>
        <a
          aria-selected="false"
          class="v-tab"
          href="#timeLine"
          role="tab"
          tabindex="0"
        >
    Timeline
        </a>
        <!---->
        <!---->
        <a
          aria-selected="false"
          class="v-tab"
          href="#pbehavior"
          role="tab"
          tabindex="0"
        >
    Pbehaviors
        </a>
        <!---->
        <!---->
        <!---->
        <a
          aria-selected="false"
          class="v-tab"
          href="#entityGantt"
          role="tab"
          tabindex="0"
        >
    Gantt chart
        </a>
      </div>
    </div>
    <div
      class="v-slide-group__next v-slide-group__next--disabled"
    >
      <transition-stub
        name="fade-transition"
      />
    </div>
  </div>
  <div
    class="v-window v-item-group theme--light v-tabs-items"
  >
    <div
      class="v-window__container"
    >
      <transition-stub
        name="v-window-x-transition"
      >
        <div
          class="v-window-item v-window-item--active"
          id="moreInfos"
        >
          <div
            class="layout pa-3"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <div
                    class="more-infos"
                  >
                    <div>
                      template
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <transition-stub
        name="v-window-x-transition"
      >
        <div
          class="v-window-item v-window-item--active"
          id="timeLine"
        >
          <div
            class="layout pa-3"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  aria-valuemax="100"
                  aria-valuemin="0"
                  class="v-progress-linear v-progress-linear--visible theme--light"
                  role="progressbar"
                  style="height: 0px;"
                >
                  <div
                    class="v-progress-linear__background primary"
                    style="opacity: 0.3; left: 0%; width: 100%;"
                  />
                  <div
                    class="v-progress-linear__buffer"
                    style="height: 0px;"
                  />
                  <transition-stub
                    name="fade-transition"
                  >
                    <div
                      class="v-progress-linear__indeterminate"
                    >
                      <div
                        class="v-progress-linear__indeterminate long primary"
                      />
                      <div
                        class="v-progress-linear__indeterminate short primary"
                      />
                    </div>
                  </transition-stub>
                </div>
                <div
                  class="v-card__text"
                >
                  <alarms-time-line-stub
                    steps="[object Object]"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <!---->
      <!---->
      <transition-stub
        name="v-window-x-transition"
      >
        <div
          class="v-window-item v-window-item--active"
          id="pbehavior"
        >
          <div
            class="layout pa-3 secondary lighten-2"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <pbehaviors-simple-list-stub
                    entity="[object Object]"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <!---->
      <!---->
      <!---->
      <transition-stub
        name="v-window-x-transition"
      >
        <div
          class="v-window-item v-window-item--active"
          id="entityGantt"
        >
          <div
            class="layout pa-3 secondary lighten-2"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <entity-gantt-stub
                    alarm="[object Object]"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`alarms-expand-panel Renders \`alarms-expand-panel\` with required props 1`] = `
<div
  class="v-tabs expand-panel secondary lighten-2 v-tabs--centered theme--dark"
>
  <div
    class="v-item-group theme--dark v-slide-group v-tabs-bar v-tabs-bar--is-mobile white--text secondary lighten-1"
    role="tablist"
  >
    <div
      class="v-slide-group__prev v-slide-group__prev--disabled"
    >
      <transition-stub
        name="fade-transition"
      />
    </div>
    <div
      class="v-slide-group__wrapper"
    >
      <div
        class="v-slide-group__content v-tabs-bar__content"
      >
        <div
          class="v-tabs-slider-wrapper"
          style="height: 2px; left: 0px; width: 0px;"
        >
          <div
            class="v-tabs-slider primary"
          />
        </div>
        <a
          aria-selected="true"
          class="v-tab v-tab--active"
          href="#moreInfos"
          role="tab"
          tabindex="0"
        >
    More infos
        </a>
        <a
          aria-selected="false"
          class="v-tab"
          href="#timeLine"
          role="tab"
          tabindex="0"
        >
    Timeline
        </a>
        <!---->
        <!---->
        <a
          aria-selected="false"
          class="v-tab"
          href="#pbehavior"
          role="tab"
          tabindex="0"
        >
    Pbehaviors
        </a>
        <!---->
        <!---->
        <!---->
        <!---->
      </div>
    </div>
    <div
      class="v-slide-group__next v-slide-group__next--disabled"
    >
      <transition-stub
        name="fade-transition"
      />
    </div>
  </div>
  <div
    class="v-window v-item-group theme--light v-tabs-items"
  >
    <div
      class="v-window__container"
    >
      <transition-stub
        name="v-window-x-transition"
      >
        <div
          class="v-window-item v-window-item--active"
          id="moreInfos"
        >
          <div
            class="layout pa-3"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <div
                    class="more-infos"
                  >
                    <div>
                      template
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <transition-stub
        name="v-window-x-transition"
      >
        <div
          class="v-window-item v-window-item--active"
          id="timeLine"
        >
          <div
            class="layout pa-3"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  aria-valuemax="100"
                  aria-valuemin="0"
                  class="v-progress-linear v-progress-linear--visible theme--light"
                  role="progressbar"
                  style="height: 0px;"
                >
                  <div
                    class="v-progress-linear__background primary"
                    style="opacity: 0.3; left: 0%; width: 100%;"
                  />
                  <div
                    class="v-progress-linear__buffer"
                    style="height: 0px;"
                  />
                  <transition-stub
                    name="fade-transition"
                  >
                    <div
                      class="v-progress-linear__indeterminate"
                    >
                      <div
                        class="v-progress-linear__indeterminate long primary"
                      />
                      <div
                        class="v-progress-linear__indeterminate short primary"
                      />
                    </div>
                  </transition-stub>
                </div>
                <div
                  class="v-card__text"
                >
                  <alarms-time-line-stub
                    steps="[object Object]"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <!---->
      <!---->
      <transition-stub
        name="v-window-x-transition"
      >
        <div
          class="v-window-item v-window-item--active"
          id="pbehavior"
        >
          <div
            class="layout pa-3 secondary lighten-2"
          >
            <div
              class="flex offset-xs0 xs12"
            >
              <div
                class="tab-item-card v-card v-sheet theme--light"
              >
                <div
                  class="v-card__text"
                >
                  <pbehaviors-simple-list-stub
                    entity="[object Object]"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </transition-stub>
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
  </div>
</div>
`;
